--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"><html><head><title>Reisekarte</title>
 <link rel="stylesheet" href="map.css" />
-<!--<meta charset="UTF-8">-->
+<meta charset="UTF-8">
 <style type="text/css">
 	html, body, #mapDiv {
 		margin: 0;
