--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>-->
     <!--<link href="https://developers.google.com/fusiontables/docs/samples/style/default.css" rel="stylesheet" type="text/css">-->
     <!--<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>-->
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4HaRfDllynCUDxqCzrcgzpZ6hvPyAKpU&callback=initMap" type="text/javascript"></script>
-    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB4HaRfDllynCUDxqCzrcgzpZ6hvPyAKpU"></script>
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
     <script type="text/javascript" src="jquery-1.8.2.min.js"></script>
     <!-- Load jQuery -->
     <!--<script type="text/javascript">
