--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
 	  		content += "<tr><td style='padding-left:0px;'><b>Stadt:<\/b><\/td><td>" + Stadt + "<\/td><\/tr>";
 	  	}
 	  	if (Land_kurz != '') {
-	  		content += "<tr><td style='padding-left:0px;'><b>Land:<\/b><\/td><td><img style='vertical-align:middle;' height='16' src='http://flagpedia.net/data/flags/small/" + Land_kurz.toLowerCase() + ".png'/> " + Land + " (" + Land_kurz + ")<\/td><\/tr>";
+	  		content += "<tr><td style='padding-left:0px;'><b>Land:<\/b><\/td><td><img style='vertical-align:middle;' height='16' src='https://flagpedia.net/data/flags/small/" + Land_kurz.toLowerCase() + ".png'/> " + Land + " (" + Land_kurz + ")<\/td><\/tr>";
 	  	}
 	  	content += "<\/table><\/div>";
 	  	if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
