--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       // Enter the API key from the Google Develoepr Console - to handle any unauthenticated requests in the code.
       var apiKey = 'AIzaSyArrSN9y0e89qoiJWLaqDu0wPYzag2D3Zw';
       // To enter one or more authentication scopes, refer to the documentation for the API.
-      var scopes = 'https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/fusiontables'; // https://www.googleapis.com/auth/plus.me 
+      var scopes = 'https://www.googleapis.com/auth/userinfo.email https://www.googleapis.com/auth/fusiontables https://www.googleapis.com/auth/plus.me'; 
       // Use a button to handle authentication the first time.
       var zugriff = 0;
       var refresh;
