--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	/*span.admin {display:none; }*/
 </style>
     <!--login-->
-    <script src="https://apis.google.com/js/client.js?display=inline"></script> <!--onload=handleClientLoad& inline-->
+    <script src="https://apis.google.com/js/client.js?onload=handleClientLoad&display=inline"></script> <!--onload=handleClientLoad& inline-->
     <script type="text/javascript">
       // Enter a client ID for a web application from the Google Developer Console.
       var clientId = '769393418900.apps.googleusercontent.com';
