--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       }
 
       function handleAuthResult(authResult) {
-	console.log("auth:");
-        console.log(authResult);
+	//console.log("auth:");
+        //console.log(authResult);
         if (authResult) {
           //makeApiCall();
           //var retObj = gapi.auth.getToken();
